--- a/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
+++ b/src/app/modules/tour-dairy/search-tour-diary/search-tour-diary.component.html
@@ -98,7 +98,7 @@
                      style="cursor: pointer">
                     <div class=" self-center ml-8">
                         <span class=" text-green">
-                            {{dateChange(activity.VisitedDate)}}
+                            {{dateChange(activity?.TourDate)}}
                         </span>
                     </div>
 
@@ -119,8 +119,8 @@
                             <th>Zone</th>
                             <th>Branch</th>
                             <th>Circle</th>
-                            <th>Visit Date</th>
-                            <th>Purpose</th>
+                            <th>Tour Date</th>
+<!--                            <th>Purpose</th>-->
                             <th>Remarks</th>
                             <th>Status</th>
                             <th>Actions</th>
@@ -128,12 +128,12 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr *ngFor="let child of activity.TourDiarys">
+                        <tr *ngFor="let child of activity?.TourDiariesByDate">
                             <td style="width: 20%">{{child?.ZoneName ? child?.ZoneName : "-"}}</td>
                             <td style="width: 20%">{{child?.BranchName ? child?.BranchName : "-"}}</td>
                             <td style="width: 20%">{{child?.CircleCode ? child?.CircleCode : "-"}}</td>
-                            <td style="width: 20%">{{dateChange(child.VisitedDate)}}</td>
-                            <td style="width: 20%">{{child.PurposeName}}</td>
+                            <td style="width: 20%">{{dateChange(child?.TourDate)}}</td>
+<!--                            <td style="width: 20%">{{child.PurposeName}}</td>-->
                             <td [title]="child.Remarks">
                                 <p class="remarks-box">
                                     {{child.Remarks.slice(0, 30)}}
