--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -38,20 +38,20 @@
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Name of Officer</mat-label>
+                                            <mat-label class="customMatLabel">Name of Officer<strong class="matMandatory">*</strong></mat-label>
                                             <input matInput formControlName="Name" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">P.P.NO</mat-label>
+                                            <mat-label class="customMatLabel">P.P.NO<strong class="matMandatory">*</strong></mat-label>
                                             <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Tour Date</mat-label>
+                                            <mat-label class="customMatLabel">Tour Date<strong class="matMandatory">*</strong></mat-label>
                                             <input  matInput readonly [matDatepicker]="picker2" formControlName="TourDate"
                                                     maxlength="8"
                                                     autocomplete="off" (dateChange)="setDate()" appNumberOnly/>
@@ -62,7 +62,7 @@
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label>Tour Plan</mat-label>
+                                            <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
                                             <mat-select formControlName="TourPlanId">
                                                 <mat-option>
                                                     Select
@@ -83,7 +83,7 @@
                                     <div class="flex" style="flex-wrap: wrap;">
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                                <mat-label>Departure From Place</mat-label>
+                                                <mat-label>Departure From Place<strong class="matMandatory">*</strong></mat-label>
                                                 <mat-select matInput formControlName="DepartureFromPlace">
                                                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.Name">
                                                         {{branch?.Name}}
@@ -94,7 +94,7 @@
 
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                                <mat-label class="customMatLabel">Departure Time</mat-label>
+                                                <mat-label class="customMatLabel">Departure Time<strong class="matMandatory">*</strong></mat-label>
                                                 <input type="text" matInput [ngxTimepicker]="timepickerDeparture" [format]="DateFormat()" readonly formControlName="DepartureFromTime"/>
                                                 <mat-icon matSuffix (click)="openFromIcon(timepickerDeparture)">schedule</mat-icon>
                                             </mat-form-field>
@@ -114,7 +114,7 @@
 <!--                                            </mat-form-field>-->
 
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                                <mat-label>Arrival At Place</mat-label>
+                                                <mat-label>Arrival At Place<strong class="matMandatory">*</strong></mat-label>
                                                 <mat-select matInput formControlName="ArrivalAtPlace">
                                                     <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.Name">
                                                         {{branch?.Name}}
@@ -125,7 +125,7 @@
 
                                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                                <mat-label class="customMatLabel">Arrival Time</mat-label>
+                                                <mat-label class="customMatLabel">Arrival Time<strong class="matMandatory">*</strong></mat-label>
                                                 <input type="text" matInput [ngxTimepicker]="timepickerArrival" [format]="DateFormat()" readonly
                                                        formControlName="ArrivalAtTime"/>
                                                 <mat-icon matSuffix (click)="openFromIcon(timepickerArrival)">schedule</mat-icon>
