--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -25,7 +25,7 @@
                                                         (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Name of Officer</mat-label>
+                                        <mat-label class="customMatLabel">Name of Officer<strong class="matMandatory">*</strong></mat-label>
                                         <input matInput formControlName="NameOfOfficer" autocomplete="off"
                                                readonly="readonly"/>
                                     </mat-form-field>
@@ -33,7 +33,7 @@
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">P.P.NO</mat-label>
+                                        <mat-label class="customMatLabel">P.P.NO<strong class="matMandatory">*</strong></mat-label>
                                         <input matInput formControlName="Ppno" autocomplete="off" readonly="readonly"/>
                                     </mat-form-field>
                                 </div>
@@ -53,7 +53,7 @@
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class=" mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label>Tour Plan</mat-label>
+                                        <mat-label>Tour Plan<strong class="matMandatory">*</strong></mat-label>
                                         <mat-select formControlName="TourPlanId">
                                             <mat-option>
                                                 Select
@@ -75,7 +75,7 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Departure Place</mat-label>
+                                            <mat-label class="customMatLabel">Departure Place<strong class="matMandatory">*</strong></mat-label>
                                             <input matInput formControlName="DepartureFromPlace" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -83,7 +83,7 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Departure Time</mat-label>
+                                            <mat-label class="customMatLabel">Departure Time<strong class="matMandatory">*</strong></mat-label>
                                             <input type="text" matInput [ngxTimepicker]="timepickerDeparture"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="DepartureFromTime"/>
@@ -102,7 +102,7 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Arrival Place</mat-label>
+                                            <mat-label class="customMatLabel">Arrival Place<strong class="matMandatory">*</strong></mat-label>
                                             <input matInput formControlName="ArrivalAtPlace" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -110,7 +110,7 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Arrival Time</mat-label>
+                                            <mat-label class="customMatLabel">Arrival Time<strong class="matMandatory">*</strong></mat-label>
                                             <input type="text" matInput [ngxTimepicker]="timepickerArrival"
                                                    [format]="DateFormat()" readonly
                                                    formControlName="ArrivalAtTime"/>
