--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="gridForm"
+<div [formGroup]="gridForm" #container
      class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
 <!--    <button type="button" (click)="assignvalues()">do it</button>-->
@@ -503,6 +503,31 @@
 
     </div>
 
+    <div class="row mt-2 mr-1">
+        <div class="col-lg-12 text-right">
+            <button *ngIf="isUpdate==false" class="ml-2 bg-green" mat-raised-button color="primary"
+                    (click)="saveTourDiary()">
+                <mat-icon class="mr-2">save</mat-icon>
+                Save
+            </button>
+            <button *ngIf="isUpdate==true" class="ml-2 bg-green" mat-raised-button color="primary"
+                    (click)="saveTourDiary()">
+                <mat-icon class="mr-2">save</mat-icon>
+                Update
+            </button>
+            <button mat-raised-button class="mr-2" color="primary" (click)="changeStatus('','S')">
+                <mat-icon class="mr-2">check_circle</mat-icon>
+                Submit
+            </button>
+            <button type="button"
+                    class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
+                    mat-raised-button color="danger" (click)="onClearForm()">
+                <mat-icon class="mr-2"> clear_all</mat-icon>
+                Clear
+            </button>
+        </div>
+    </div>
+
 <!--    {{TourDiaryList|json}}-->
     <div class="mt-2 row">
         <div class="col-lg-12 p-0 ist-table overflow-auto shadow-xs rounded-sm mt-3">
@@ -546,7 +571,7 @@
                 <tbody>
                 <tr *ngFor="let mcoDiary of TourDiaryList">
                     <td>
-                        <button class="ml-2" mat-icon-button *ngIf="checkStatus(mcoDiary, 'delete')" color="primary" (click)="edit(mcoDiary)"
+                        <button class="ml-2" mat-icon-button *ngIf="checkStatus(mcoDiary, 'delete')" color="primary" (click)="edit(mcoDiary); container.scrollTop = 0"
                         >
                             <mat-icon>
                                 edit
