--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
+            <div class="heading" #container>TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
@@ -357,7 +357,7 @@
                                     <tbody>
                                     <tr *ngFor="let ZcTourDiary of TourDiaryList" >
                                         <td>
-                                            <button   type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZcTourDiary, 'edit')"  (click)="edit(ZcTourDiary)"
+                                            <button   type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(ZcTourDiary, 'edit')"  (click)="edit(ZcTourDiary); container.scrollTop = 0"
                                             >
                                                 <mat-icon>
                                                     edit
