--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -4,7 +4,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF PROVINCIAL CHIEF</div>
+            <div class="heading" #container>TOUR DIARY & PROGRESS REPORT OF PROVINCIAL CHIEF</div>
             <button (click)="assignValues()">Patch Dummy Data</button>
         </div>
     </div>
@@ -267,7 +267,7 @@
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
-                                        <button mat-icon-button (click)="editData(single_list)">
+                                        <button mat-icon-button (click)="editData(single_list); container.scrollTop = 0">
                                             <mat-icon>edit</mat-icon>
                                         </button>
                                         <button mat-icon-button (click)="deleteData(single_list)">
