--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -3,7 +3,7 @@
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading">TOUR DIARY & PROGRESS REPORT OF REGIONAL CHIEF</div>
+            <div class="heading" #container>TOUR DIARY & PROGRESS REPORT OF REGIONAL CHIEF</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
@@ -223,7 +223,7 @@
                                     <tbody>
                                     <tr *ngFor="let rcDiary of TourDiaryList">
                                         <td>
-                                            <button type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(rcDiary, 'edit')" (click)="edit(rcDiary)"
+                                            <button type="button" class="ml-2" mat-icon-button color="primary" *ngIf="checkStatus(rcDiary, 'edit')" (click)="edit(rcDiary); container.scrollTop = 0"
                                             >
                                                 <mat-icon>
                                                     edit
