--- a/src/app/modules/tour-dairy/tour-diary-approval-bm/tour-diary-approval-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-bm/tour-diary-approval-bm.component.html
@@ -1,15 +1,16 @@
-<div [formGroup]="gridForm"
+<div
     class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
             <div class="heading">TOUR DIARY & PROGRESS REPORT OF BRANCH MANAGER</div>
-<!--            <button (click)="assignValues()">DO it</button>-->
+
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
         </div>
     </div>
+
 
     <div id="Kt-portlet-margin-top">
         <div  class="collapse show" id="collapseExample">
@@ -18,6 +19,7 @@
                 <div class="kt-form">
 
                     <div class="kt-portlet__body">
+
                         <div class="col-lg-12 p-0 ist-table overflow-auto border shadow-xs rounded-sm bg-gray-50 mt-2">
                             <table class="table">
                                 <thead>
@@ -304,10 +306,23 @@
                     </div>
                 </div>
 
+
             </div>
         </div>
     </div>
-
+s
+    <div class="row mt-2 mr-1">
+        <div class="col-lg-12 text-right">
+            <button class="mr-2 bg-green" mat-raised-button color="primary" (click)="changeStatus('A')">
+                <mat-icon class="mr-2">check</mat-icon>
+                Approve All
+            </button>
+            <button class="mr-2 bg-red" mat-raised-button color="primary" (click)="changeStatus('R')">
+                <mat-icon class="mr-2">cancel</mat-icon>
+                ReferBack All
+            </button>
+        </div>
+    </div>
 </div>
 
 <ngx-material-timepicker #timepickerDeparture></ngx-material-timepicker>
