--- a/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-approval-zm/tour-diary-approval-zm.component.html
@@ -186,12 +186,12 @@
     <div class="row mt-2 mr-1">
         <div class="col-lg-12 text-right">
             <button type="button" class="mr-2 bg-green" mat-raised-button color="primary"
-                    (click)="approve()">
+                    (click)="changeStatus('A')">
                 <mat-icon class="mr-2">check_circle</mat-icon>
                 Approve
             </button>
             <button type="button" class="mr-2  bg-red" mat-raised-button color="primary"
-                    (click)="referback()">
+                    (click)="changeStatus('R')">
                 <mat-icon class="mr-2">cancel</mat-icon>
                 Referback
             </button>
