--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -338,6 +338,7 @@
                                     <tr class=" text-center">
                                         <th rowspan="2"  >Actions</th>
                                         <th rowspan="2"  >Date</th>
+                                        <th rowspan="2">Tour Plan</th>
                                         <th colspan="2"  >Departure from</th>
                                         <th colspan="2"  >Arrival at</th>
                                         <th rowspan="2"  >General Administration/Ambiance & Public Complaints of the Branch Visited</th>
@@ -371,6 +372,7 @@
 
                                         </td>
                                         <td>{{ZcTourDiary.TourDate}}</td>
+                                        <td></td>
                                         <td>{{ZcTourDiary.DepartureFromPlace}}</td>
                                         <td>{{ZcTourDiary.DepartureFromTime}}</td>
                                         <td>{{ZcTourDiary.ArrivalAtPlace}}</td>
