--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -201,6 +201,7 @@
                                     <tr class=" text-center">
                                         <th rowspan="2"  >Actions</th>
                                         <th rowspan="2"  >Date</th>
+                                        <th rowspan="2">Tour Plan</th>
                                         <th colspan="2" rowspan="2"  >Departure from</th>
                                         <th colspan="2" rowspan="2"  >Arrival at</th>
                                         <th colspan="6"  >Portfolio of the branch visited</th>
@@ -218,6 +219,7 @@
                                         <th rowspan="2"  >No. of Notices issued by the branch to SPA/Guarantors</th>
                                     </tr>
                                     <tr class=" text-center sub-table">
+                                        <th></th>
                                         <th></th>
                                         <th></th>
                                         <th  >Place</th>
@@ -249,6 +251,7 @@
 
                                         </td>
                                         <td>{{ZmTourDiary.TourDate}}</td>
+                                        <td></td>
                                         <td>{{ZmTourDiary.DepartureFromPlace}}</td>
                                         <td>{{ZmTourDiary.DepartureFromTime}}</td>
                                         <td>{{ZmTourDiary.ArrivalAtPlace}}</td>
