--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -191,6 +191,7 @@
                                     <tr class="table-header-background text-center">
                                         <th rowspan="3" class="border-r border-gray-400">Actions</th>
                                         <th rowspan="3" class="border-r border-gray-400">Date</th>
+                                        <th rowspan="3" class="border-r border-gray-400">Tour Plan</th>
                                         <th colspan="2" rowspan="2" class="border-r border-gray-400">Departure from</th>
                                         <th colspan="2" rowspan="2" class="border-r border-gray-400">Arrival at</th>
                                         <th rowspan="3" class="border-r border-gray-400">No. of defaulters contacted</th>
@@ -223,6 +224,7 @@
                                             </button>
                                         </td>
                                         <td class="border-r border-gray-400">{{single_list.TourDate}}</td>
+                                        <td class="border-r border-gray-400"></td>
                                         <td class="border-r border-gray-400">{{single_list.DepartureFromPlace}}</td>
                                         <td class="border-r border-gray-400">{{single_list.DepartureFromTime}}</td>
                                         <td class="border-r border-gray-400">{{single_list.ArrivalAtPlace}}</td>
