--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -274,6 +274,7 @@
                                 <thead>
                                 <tr class="table-header-background text-center">
                                     <th rowspan="2" class="border-r border-gray-400">Date</th>
+                                    <th rowspan="2" class="border-r border-gray-400">Tour Plan</th>
                                     <th colspan="2" class="border-r border-gray-400">Departure from</th>
                                     <th colspan="2" class="border-r border-gray-400">Arrival at</th>
                                     <th colspan="2" class="border-r border-gray-400">Disbursements</th>
@@ -308,6 +309,12 @@
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline">
                                             <input matInput readonly="readonly" [value]="single_list?.TourDate">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
