--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -186,6 +186,7 @@
                                 <thead>
                                 <tr class="table-header-background text-center">
                                     <th rowspan="3" class="border-r border-gray-400">Date</th>
+                                    <th rowspan="3" class="border-r border-gray-400">Tour Plan</th>
                                     <th colspan="2" rowspan="2" class="border-r border-gray-400">Departure from</th>
                                     <th colspan="2" rowspan="2" class="border-r border-gray-400">Arrival at</th>
                                     <th rowspan="3" class="border-r border-gray-400">No. of defaulters contacted</th>
@@ -214,6 +215,12 @@
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline">
                                             <input matInput readonly="readonly" [value]="single_list.TourDate">
+                                        </mat-form-field>
+                                    </td>
+                                    <td class="border-r border-gray-400">
+                                        <mat-form-field class=" mat-form-field-fluid w-full"
+                                                        appearance="outline">
+                                            <input matInput readonly="readonly">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
