--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -228,7 +228,7 @@
                                     <td class="border-r border-gray-400">
                                         <mat-form-field class=" mat-form-field-fluid w-full"
                                                         appearance="outline">
-                                            <input matInput readonly="readonly">
+                                            <input matInput readonly="readonly" [value]="single_list?.PlanPurposeName">
                                         </mat-form-field>
                                     </td>
                                     <td class="border-r border-gray-400">
