--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -1,5 +1,5 @@
 <div
-    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
+    class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent" #container>
 
 
     <div class="row pt-3">
@@ -250,7 +250,7 @@
                                         </button>
                                     </td>
                                     <td class="border-r border-gray-400">{{single_list.TourDate}}</td>
-                                    <td class="border-r border-gray-400"></td>
+                                    <td class="border-r border-gray-400">{{single_list.PlanPurposeName}}</td>
                                     <td class="border-r border-gray-400">{{single_list.DepartureFromPlace}}</td>
                                     <td class="border-r border-gray-400">{{single_list.DepartureFromTime}}</td>
                                     <td class="border-r border-gray-400">{{single_list.ArrivalAtPlace}}</td>
