--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -585,7 +585,7 @@
 
                     </td>
                     <td>{{dateChange(mcoDiary.TourDate)}}</td>
-                    <td></td>
+                    <td>{{mcoDiary?.PlanPurposeName}}</td>
                     <td>{{mcoDiary.DepartureFromPlace}}</td>
                     <td>{{mcoDiary.DepartureFromTime}}</td>
                     <td>{{mcoDiary.ArrivalAtPlace}}</td>
