--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -1,9 +1,9 @@
-<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
+<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent" #container>
 
 
     <div class="row pt-3">
         <div class="col-lg-9 col-sm-12">
-            <div class="heading" #container>TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
+            <div class="heading">TOUR DIARY & PROGRESS REPORT OF ZONAL CHIEF</div>
         </div>
         <div class="col-lg-3 col-sm-12 self-center">
 
@@ -372,7 +372,7 @@
 
                                         </td>
                                         <td>{{ZcTourDiary.TourDate}}</td>
-                                        <td></td>
+                                        <td>{{ZcTourDiary?.PlanPurposeName}}</td>
                                         <td>{{ZcTourDiary.DepartureFromPlace}}</td>
                                         <td>{{ZcTourDiary.DepartureFromTime}}</td>
                                         <td>{{ZcTourDiary.ArrivalAtPlace}}</td>
