--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -9,7 +9,7 @@
     </div>
 
 
-    <div id="Kt-portlet-margin-top" #container>
+    <div id="Kt-portlet-margin-top">
         <div class="collapse show" id="collapseExample">
             <form [formGroup]="gridForm" class="kt-form kt-form--group-seperator-dashed">
 
